--- a/src/Article.css
+++ b/src/Article.css
@@ -1,9 +1,10 @@
 
 .articles{
-    background-color: black;
+   
+    background-color:linear-gradient(90deg,rgba(0, 0, 0, 1) 33%, rgba(35, 35, 35, 1) 88%);
     width: 100%;
     display: flex;
-    
+    height:fit-content;
     
     
 }
