--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,29 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #232323;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
+ 
+  
 }
+
+body {
+    margin: 0px;
+    padding: 0px;
+  
+     box-sizing: border-box; 
+
+  width: 100%;
+
+  min-height: 100vh; 
+}
+
+
 
 a {
   font-weight: 500;
@@ -22,15 +38,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-  background-color: #232323;
-}
+
 
 h1 {
   font-size: 3.2em;
@@ -56,10 +64,18 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+footer {
+  height: 100px;
+  background-color: black;
+
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
+    /*
     background-color: #ffffff;
+    */
   }
   a:hover {
     color: #747bff;
