--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -30,19 +35,53 @@ body {
 
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  
+  color: white;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
 }
 
-
+footer {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+  
+}
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h2{
+  color: white;
+  margin-bottom: 2px;
+}
+
+h4{
+ color: gray;
+}
+
+footer p {
+  color: white;
+  font-size: 13px;
+  font-family: "Raleway", sans-serif;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+.footerLogos{
+margin-top: 60px;
+}
+
+.footerContact{
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
 }
 
 button {
@@ -64,11 +103,6 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-footer {
-  height: 100px;
-  background-color: black;
-
-}
 
 @media (prefers-color-scheme: light) {
   :root {
