--- a/src/Article.css
+++ b/src/Article.css
@@ -1,18 +1,54 @@
 
 .articles{
    
-    background-color:linear-gradient(90deg,rgba(0, 0, 0, 1) 33%, rgba(35, 35, 35, 1) 88%);
+    background-color:black;
     width: 100%;
     display: flex;
     height:fit-content;
+    justify-content: space-evenly;
     
     
 }
 
 .kldouble{
-    width: 640px;
+    width: 450px;
 }
 
+article p{
+    color: white;
+    font-weight: 200;
+}
+
+.songStats{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+}
+
+.numbStat{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 15px;
+}
+
+.songStats h4{
+    color: white;
+    margin: 1px;
+}
+
+p{
+    margin-bottom: 35px;
+}
+
+.songStats p{
+    
+    margin: 4px;
+}
+
+h3{
+    margin-bottom: 35px;
+}
 @media  (max-width: 468px) {
 
     .articles{
