--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ footer {
   flex-direction: column;
   align-items: center;
   height: fit-content;
-  
+ padding-bottom: 80px; 
 }
 
 h1 {
@@ -79,9 +79,21 @@ margin-top: 60px;
 }
 
 .footerContact{
-  display: flex;
-  align-items: center;
+ display: flex;
+ justify-content: space-evenly;
   margin-top: 50px;
+  width: 100%;
+  
+}
+ footer ul{
+margin: 0;
+padding: 0;
+ }
+
+.cntFormat{
+ display: flex;
+ flex-direction: column;
+ row-gap: 25px;
 }
 
 button {
