--- a/src/Header.css
+++ b/src/Header.css
@@ -12,6 +12,7 @@
     align-items: center;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    flex-wrap: wrap;
 }
 
 .navOptions {
@@ -33,11 +34,13 @@
 
 @media  (max-width: 468px){
     .header{
-        width:90%;
-        padding-left: 1rem;
+        
+        width:468px;
+        /*padding-left: 1rem;
         padding-right: 2rem;
         padding-top: 0.3rem;
     padding-bottom: 0.3rem;
+    */
 }
 
 .optionMenu{
