--- a/src/Section.css
+++ b/src/Section.css
@@ -1,6 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 .freeD {
 
-font-family: 'Nunito';
+font-family: 'Nunito',sans-serif;
 font-weight: 800;
 font-size: 4rem;
 line-height: 0.5rem;
