--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ button:focus-visible {
 .modal-underlay {
   position: absolute;
   inset: 0;
-  background: var(--background-muted);
+  background:#121212;
   opacity: 0.8;
   z-index: 99;
   border: none;
@@ -153,9 +153,9 @@ button:focus-visible {
   width: 100%;
   margin: 0 auto;
   min-height: 400px;
-  border-radius: var(--border-radius-large);
-  border: 1px solid var(--border-primary);
-  background: var(--background-primary);
+  border-radius:  0.75rem;
+  border: white;
+  background:black;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -163,6 +163,45 @@ button:focus-visible {
   justify-content: center; */
   gap: 1rem;
 }
+
+.form-title {
+  color: #bbb9b9;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 0px;
+}
+
+.form-text{
+    max-width: 570px;
+    height: 35px;
+     font-size: 1em;
+    background-color: #121212;
+    border: 1px solid #bbb9b9;
+    color: white;
+    padding: 0.5rem 0.75rem;
+    border-radius: 0.5rem;
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.form-text:focus-within{
+border-color: white;
+}
+
+.form-text:hover{
+ border-color: white;
+}
+
+button h2{
+  color: black;
+  margin: 0px;
+}
+
+.submit-button{
+  width:15rem;
+  padding-top: 0.3rem;
+}
+
 
 
 @media (prefers-color-scheme: light) {
@@ -178,4 +217,26 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+@media  (max-width:468px) {
+  .footerContact {
+    flex-direction: column;
+    padding-left: 30px;
+  }
+
+  .modal-container{
+    width: 70%;
+  }
+.form-title{
+  font-size: 12px;
+  font-weight: 100;
+}
+
+.express-holder{
+  display: flex;
+  justify-content: center;
+}
+
 }
