--- a/src/Section.css
+++ b/src/Section.css
@@ -202,11 +202,11 @@ width:1190px
 
         .message1{
             color:gray; 
-            white-space:nowrap;
-            font-size:  10px; 
-           margin-bottom: 5px;
+            
+            font-size:  17px; 
+           margin-bottom: 15px;
            margin-top: 0px;
-           line-height: 17px;
+           line-height: 25px;
         }
 
         .regbtn2{
@@ -221,14 +221,13 @@ width:1190px
 
         
 .downloadLInk{
-    width:70px
+    width:100px
 }
 
 .anc1{
+    width: fit-content;
+    height: fit-content;
     margin: 5px;
-    width: 70px;
-    height: 20px;
-    border-radius: 5px;
 }
 
 .downloadClass{
