--- a/src/Header.css
+++ b/src/Header.css
@@ -2,12 +2,13 @@
     background-color: black;
     height: 10vh;
     display: flex;
-    width: 1190px;
+   width: 100vw;
+  max-width: 100vw;
+  min-width: 0;
     
         
-    justify-content: space-between;
-    padding-left: 5rem;
-    padding-right: 5rem;
+    justify-content: space-evenly;
+     
     color: white;
     align-items: center;
     padding-top: 1rem;
@@ -22,7 +23,7 @@
 
 
 .logoHolder {
-    width: 5rem;
+    width: 2rem;
         
     
 }
@@ -40,6 +41,7 @@
         padding-right: 1.82rem;
         padding-top: 0.3rem;
     padding-bottom: 0.3rem;
+    justify-content: space-between;
     
 }
 
