--- a/src/Header.css
+++ b/src/Header.css
@@ -36,13 +36,20 @@
 @media  (max-width: 468px){
     .header{
         
-        width:93.3%;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
-    justify-content: space-between;
+        width:100%;
+
     
+    place-items: center;
+    
+}
+.header-item{
+width:90%;
+
+padding-top: 0.3rem;
+padding-bottom: 0.3rem;
+display: flex;
+justify-content: space-between;
+align-items: center;
 }
 
 .klogo{
