--- a/src/Section.css
+++ b/src/Section.css
@@ -53,10 +53,11 @@ color: #FF453A;
     
 display: flex;
 padding-top: 10px;
-
 padding-left: 5rem;
 padding-right: 5rem;
-width:1190px
+
+width:95%;
+
 
 }
 
@@ -166,10 +167,11 @@ width:1190px
         padding-top: 70px;
         justify-content: center;
         align-items: center;
-        padding-left: 2.65rem;
-        padding-right: 2.9rem;
-        width: 81%;
-        gap:0;
+        padding-left: 0px;
+        padding-right: 0px;
+        
+        width: 100%;
+        overflow-x: hidden;
         
         
         
